--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
